update to include code for evaluating naive model

--- a/detectron2_naive.ipynb
+++ b/detectron2_naive.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1oMWI98PodlLkh0ar3_DFHWtUW_x3f4AS",
-      "authorship_tag": "ABX9TyMa8ZjBXUGf/rgw5G0M9T34",
+      "authorship_tag": "ABX9TyMOjKJDYFiaejyR/hC2oGET",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -719,6 +719,27 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Login to AIcrowd\n",
+        "!pip install aicrowd-cli > /dev/null\n",
+        "!aicrowd login\n",
+        "\n",
+        "\n",
+        "# List dataset for this challenge\n",
+        "!aicrowd dataset list -c food-recognition-benchmark-2022\n",
+        "\n",
+        "# Download dataset\n",
+        "!aicrowd dataset download -c food-recognition-benchmark-2022\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Rx5_iAzou_U_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -776,21 +797,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Pj7KZFt7_JY",
-        "outputId": "1be29d5b-8112-4d0f-e607-4d04b29a770c"
+        "outputId": "5f8eb1b0-4450-4ad2-dab0-a6af9021f2fe"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in links: https://download.pytorch.org/whl/torch_stable.html\n",
-            "\u001b[31mERROR: Could not find a version that satisfies the requirement torch==1.9.0+cu111 (from versions: 1.11.0, 1.11.0+cpu, 1.11.0+cu102, 1.11.0+cu113, 1.11.0+cu115, 1.11.0+rocm4.3.1, 1.11.0+rocm4.5.2, 1.12.0, 1.12.0+cpu, 1.12.0+cu102, 1.12.0+cu113, 1.12.0+cu116, 1.12.0+rocm5.0, 1.12.0+rocm5.1.1, 1.12.1, 1.12.1+cpu, 1.12.1+cu102, 1.12.1+cu113, 1.12.1+cu116, 1.12.1+rocm5.0, 1.12.1+rocm5.1.1, 1.13.0, 1.13.0+cpu, 1.13.0+cu116, 1.13.0+cu117, 1.13.0+cu117.with.pypi.cudnn, 1.13.0+rocm5.1.1, 1.13.0+rocm5.2, 1.13.1, 1.13.1+cpu, 1.13.1+cu116, 1.13.1+cu117, 1.13.1+cu117.with.pypi.cudnn, 1.13.1+rocm5.1.1, 1.13.1+rocm5.2, 2.0.0, 2.0.0+cpu, 2.0.0+cpu.cxx11.abi, 2.0.0+cu117, 2.0.0+cu117.with.pypi.cudnn, 2.0.0+cu118, 2.0.0+rocm5.3, 2.0.0+rocm5.4.2, 2.0.1, 2.0.1+cpu, 2.0.1+cpu.cxx11.abi, 2.0.1+cu117, 2.0.1+cu117.with.pypi.cudnn, 2.0.1+cu118, 2.0.1+rocm5.3, 2.0.1+rocm5.4.2, 2.1.0, 2.1.0+cpu, 2.1.0+cpu.cxx11.abi, 2.1.0+cu118, 2.1.0+cu121, 2.1.0+cu121.with.pypi.cudnn, 2.1.0+rocm5.5, 2.1.0+rocm5.6, 2.1.1, 2.1.1+cpu, 2.1.1+cpu.cxx11.abi, 2.1.1+cu118, 2.1.1+cu121, 2.1.1+cu121.with.pypi.cudnn, 2.1.1+rocm5.5, 2.1.1+rocm5.6, 2.1.2, 2.1.2+cpu, 2.1.2+cpu.cxx11.abi, 2.1.2+cu118, 2.1.2+cu121, 2.1.2+cu121.with.pypi.cudnn, 2.1.2+rocm5.5, 2.1.2+rocm5.6)\u001b[0m\u001b[31m\n",
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement torch==1.9.0+cu111 (from versions: 1.11.0, 1.11.0+cpu, 1.11.0+cu102, 1.11.0+cu113, 1.11.0+cu115, 1.11.0+rocm4.3.1, 1.11.0+rocm4.5.2, 1.12.0, 1.12.0+cpu, 1.12.0+cu102, 1.12.0+cu113, 1.12.0+cu116, 1.12.0+rocm5.0, 1.12.0+rocm5.1.1, 1.12.1, 1.12.1+cpu, 1.12.1+cu102, 1.12.1+cu113, 1.12.1+cu116, 1.12.1+rocm5.0, 1.12.1+rocm5.1.1, 1.13.0, 1.13.0+cpu, 1.13.0+cu116, 1.13.0+cu117, 1.13.0+cu117.with.pypi.cudnn, 1.13.0+rocm5.1.1, 1.13.0+rocm5.2, 1.13.1, 1.13.1+cpu, 1.13.1+cu116, 1.13.1+cu117, 1.13.1+cu117.with.pypi.cudnn, 1.13.1+rocm5.1.1, 1.13.1+rocm5.2, 2.0.0, 2.0.0+cpu, 2.0.0+cpu.cxx11.abi, 2.0.0+cu117, 2.0.0+cu117.with.pypi.cudnn, 2.0.0+cu118, 2.0.0+rocm5.3, 2.0.0+rocm5.4.2, 2.0.1, 2.0.1+cpu, 2.0.1+cpu.cxx11.abi, 2.0.1+cu117, 2.0.1+cu117.with.pypi.cudnn, 2.0.1+cu118, 2.0.1+rocm5.3, 2.0.1+rocm5.4.2, 2.1.0, 2.1.0+cpu, 2.1.0+cpu.cxx11.abi, 2.1.0+cu118, 2.1.0+cu121, 2.1.0+cu121.with.pypi.cudnn, 2.1.0+rocm5.5, 2.1.0+rocm5.6, 2.1.1, 2.1.1+cpu, 2.1.1+cpu.cxx11.abi, 2.1.1+cu118, 2.1.1+cu121, 2.1.1+cu121.with.pypi.cudnn, 2.1.1+rocm5.5, 2.1.1+rocm5.6, 2.1.2, 2.1.2+cpu, 2.1.2+cpu.cxx11.abi, 2.1.2+cu118, 2.1.2+cu121, 2.1.2+cu121.with.pypi.cudnn, 2.1.2+rocm5.5, 2.1.2+rocm5.6, 2.2.0+cpu, 2.2.0+cpu.cxx11.abi, 2.2.0+cu118, 2.2.0+cu121, 2.2.0+rocm5.6, 2.2.0+rocm5.7)\u001b[0m\u001b[31m\n",
             "\u001b[0m\u001b[31mERROR: No matching distribution found for torch==1.9.0+cu111\u001b[0m\u001b[31m\n",
             "\u001b[0mRequirement already satisfied: cython in /usr/local/lib/python3.10/dist-packages (3.0.8)\n",
             "Collecting pyyaml==5.1\n",
             "  Downloading PyYAML-5.1.tar.gz (274 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m274.2/274.2 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m274.2/274.2 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
             "  \n",
             "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
@@ -839,17 +860,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fLzGecWj8o-p",
-        "outputId": "829b3341-416b-4898-e9fe-0da8585d5e28"
+        "outputId": "a104112c-0c26-47e8-df29-34f3cd2fd5a8"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Collecting git+https://github.com/facebookresearch/detectron2.git\n",
-            "  Cloning https://github.com/facebookresearch/detectron2.git to /tmp/pip-req-build-wibbsjc0\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/detectron2.git /tmp/pip-req-build-wibbsjc0\n",
+            "  Cloning https://github.com/facebookresearch/detectron2.git to /tmp/pip-req-build-1ir1urwt\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/detectron2.git /tmp/pip-req-build-1ir1urwt\n",
             "  Resolved https://github.com/facebookresearch/detectron2.git to commit b7ff9466d174fbb7061ff6d3773cd9c372a8e56f\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: Pillow>=7.1 in /usr/local/lib/python3.10/dist-packages (from detectron2==0.6) (9.4.0)\n",
@@ -864,25 +885,25 @@
             "Requirement already satisfied: tensorboard in /usr/local/lib/python3.10/dist-packages (from detectron2==0.6) (2.15.1)\n",
             "Collecting fvcore<0.1.6,>=0.1.5 (from detectron2==0.6)\n",
             "  Downloading fvcore-0.1.5.post20221221.tar.gz (50 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.2/50.2 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.2/50.2 kB\u001b[0m \u001b[31m657.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting iopath<0.1.10,>=0.1.7 (from detectron2==0.6)\n",
             "  Downloading iopath-0.1.9-py3-none-any.whl (27 kB)\n",
             "Collecting omegaconf<2.4,>=2.1 (from detectron2==0.6)\n",
             "  Downloading omegaconf-2.3.0-py3-none-any.whl (79 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.5/79.5 kB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.5/79.5 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting hydra-core>=1.1 (from detectron2==0.6)\n",
             "  Downloading hydra_core-1.3.2-py3-none-any.whl (154 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.5/154.5 kB\u001b[0m \u001b[31m20.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.5/154.5 kB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting black (from detectron2==0.6)\n",
-            "  Downloading black-24.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.7 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m57.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading black-24.1.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.7 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m37.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from detectron2==0.6) (23.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from fvcore<0.1.6,>=0.1.5->detectron2==0.6) (1.23.5)\n",
             "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from fvcore<0.1.6,>=0.1.5->detectron2==0.6) (6.0.1)\n",
             "Collecting antlr4-python3-runtime==4.9.* (from hydra-core>=1.1->detectron2==0.6)\n",
             "  Downloading antlr4-python3-runtime-4.9.3.tar.gz (117 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m117.0/117.0 kB\u001b[0m \u001b[31m15.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m117.0/117.0 kB\u001b[0m \u001b[31m9.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting portalocker (from iopath<0.1.10,>=0.1.7->detectron2==0.6)\n",
             "  Downloading portalocker-2.8.2-py3-none-any.whl (17 kB)\n",
@@ -924,17 +945,17 @@
             "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<2,>=0.5->tensorboard->detectron2==0.6) (3.2.2)\n",
             "Building wheels for collected packages: detectron2, fvcore, antlr4-python3-runtime\n",
             "  Building wheel for detectron2 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for detectron2: filename=detectron2-0.6-cp310-cp310-linux_x86_64.whl size=6119666 sha256=ef2432d01621f0e9d3be51a8aeb37e34ef09a99bc000aa57d33bdb6f143feb2a\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-z2spb2zv/wheels/47/e5/15/94c80df2ba85500c5d76599cc307c0a7079d0e221bb6fc4375\n",
+            "  Created wheel for detectron2: filename=detectron2-0.6-cp310-cp310-linux_x86_64.whl size=6119658 sha256=5752b6408ba988980f2c50db611f43ff72871713d0e5321f8c7dba744ef9fe7a\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-ooepzcws/wheels/47/e5/15/94c80df2ba85500c5d76599cc307c0a7079d0e221bb6fc4375\n",
             "  Building wheel for fvcore (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for fvcore: filename=fvcore-0.1.5.post20221221-py3-none-any.whl size=61400 sha256=752a30d8a75d4c6be18ad2b52210445f3d1434109ff73145d1c59949f08a8782\n",
+            "  Created wheel for fvcore: filename=fvcore-0.1.5.post20221221-py3-none-any.whl size=61400 sha256=bf00a2d6438030235dae2074f4873c635635b777aa0f10d83e374b9c125c73a0\n",
             "  Stored in directory: /root/.cache/pip/wheels/01/c0/af/77c1cf53a1be9e42a52b48e5af2169d40ec2e89f7362489dd0\n",
             "  Building wheel for antlr4-python3-runtime (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for antlr4-python3-runtime: filename=antlr4_python3_runtime-4.9.3-py3-none-any.whl size=144554 sha256=ff4025e198806194ccf97a7c8b8f4a4c32300527c1394723166f410ab4219912\n",
+            "  Created wheel for antlr4-python3-runtime: filename=antlr4_python3_runtime-4.9.3-py3-none-any.whl size=144554 sha256=b961104ba4cb338f639ff48d8ef1db7543af01bb757190497a0e2ee5c53df9d6\n",
             "  Stored in directory: /root/.cache/pip/wheels/12/93/dd/1f6a127edc45659556564c5730f6d4e300888f4bca2d4c5a88\n",
             "Successfully built detectron2 fvcore antlr4-python3-runtime\n",
             "Installing collected packages: antlr4-python3-runtime, yacs, portalocker, pathspec, omegaconf, mypy-extensions, iopath, hydra-core, black, fvcore, detectron2\n",
-            "Successfully installed antlr4-python3-runtime-4.9.3 black-24.1.0 detectron2-0.6 fvcore-0.1.5.post20221221 hydra-core-1.3.2 iopath-0.1.9 mypy-extensions-1.0.0 omegaconf-2.3.0 pathspec-0.12.1 portalocker-2.8.2 yacs-0.1.8\n"
+            "Successfully installed antlr4-python3-runtime-4.9.3 black-24.1.1 detectron2-0.6 fvcore-0.1.5.post20221221 hydra-core-1.3.2 iopath-0.1.9 mypy-extensions-1.0.0 omegaconf-2.3.0 pathspec-0.12.1 portalocker-2.8.2 yacs-0.1.8\n"
           ]
         }
       ]
@@ -985,6 +1006,28 @@
       ],
       "metadata": {
         "id": "VGXyJWXl9A83"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To grab the second tar file\n",
+        "#tar_path = '/content/drive/MyDrive/Masters-2/Deep Learning/Group Project 1 - CV/data/train/public_training_set_release_2.0.tar.gz'\n",
+        "\n",
+        "# Define the path where you want to extract the images for the training set\n",
+        "#extraction_path_train = '/content/drive/MyDrive/Masters-2/Deep Learning/Group Project 1 - CV/data/train/extracted_images'\n",
+        "\n",
+        "# Create the directory for the training set if it doesn't exist\n",
+        "#if not os.path.exists(extraction_path_train):\n",
+        "    #os.makedirs(extraction_path_train)\n",
+        "\n",
+        "# Extract the .tar file using the tar command without gzip option\n",
+        "#!tar -xvf '{tar_path}' -C '{extraction_path_train}'"
+      ],
+      "metadata": {
+        "id": "32QwiFWhKVfD"
       },
       "execution_count": null,
       "outputs": []
@@ -1142,28 +1185,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# To grab the second tar file\n",
-        "#tar_path = '/content/drive/MyDrive/Masters-2/Deep Learning/Group Project 1 - CV/data/train/public_training_set_release_2.0.tar.gz'\n",
-        "\n",
-        "# Define the path where you want to extract the images for the training set\n",
-        "#extraction_path_train = '/content/drive/MyDrive/Masters-2/Deep Learning/Group Project 1 - CV/data/train/extracted_images'\n",
-        "\n",
-        "# Create the directory for the training set if it doesn't exist\n",
-        "#if not os.path.exists(extraction_path_train):\n",
-        "    #os.makedirs(extraction_path_train)\n",
-        "\n",
-        "# Extract the .tar file using the tar command without gzip option\n",
-        "#!tar -xvf '{tar_path}' -C '{extraction_path_train}'"
-      ],
-      "metadata": {
-        "id": "32QwiFWhKVfD"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1357,10 +1378,10 @@
       "source": [
         "cfg = get_cfg()\n",
         "# add project-specific config (e.g., TensorMask) here if you're not running a model in detectron2's core library\n",
-        "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml\"))\n",
+        "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/fast_rcnn_R_50_FPN_1x.yaml\"))\n",
         "cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = 0.5  # set threshold for this model\n",
         "# Find a model from detectron2's model zoo. You can use the https://dl.fbaipublicfiles... url as well\n",
-        "cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml\")\n",
+        "cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-Detection/fast_rcnn_R_50_FPN_1x.yaml\")\n",
         "predictor = DefaultPredictor(cfg)"
       ],
       "metadata": {
@@ -1391,6 +1412,21 @@
     {
       "cell_type": "code",
       "source": [
+        "#evaluate with the naive model on the on the validation set\n",
+        "evaluator = COCOEvaluator(\"validation_dataset\", cfg, False, output_dir=cfg.OUTPUT_DIR)\n",
+        "val_loader = build_detection_test_loader(cfg, \"validation_dataset\")\n",
+        "valResults = inference_on_dataset(predictor.model, val_loader, evaluator)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "GD0tJxJCUodU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "dataset_name = \"validation_dataset\"\n",
         "dataset_metadata = MetadataCatalog.get(dataset_name)\n",
         "dataset_dicts = DatasetCatalog.get(dataset_name)\n",
@@ -1404,12 +1440,7 @@
         "    cv2.waitKey(0)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "IY5Knrvccwxi",
-        "outputId": "b2402a2b-2e59-4ec2-afbd-666d13e3b575"
+        "id": "IY5Knrvccwxi"
       },
       "execution_count": null,
       "outputs": []
