--- a/S3Bucket_GoogleColab_Function.ipynb
+++ b/S3Bucket_GoogleColab_Function.ipynb
@@ -20,7 +20,7 @@
         "\n",
         "def setup_and_download_from_s3(aws_access_key_id, aws_secret_access_key, bucket_name, s3_folder, local_dir=None):\n",
         "    \"\"\"\n",
-        "    Sets up S3 client with given credentials and downloads a specified folder from S3 to a local directory.\n",
+        "    This function sets up the AWS S3 client and downloads the files from the S3 bucket to the local directory.\n",
         "\n",
         "    Parameters:\n",
         "    aws_access_key_id (str): AWS access key ID.\n",
@@ -32,8 +32,10 @@
         "\n",
         "    # Create an S3 client\n",
         "    try:\n",
+        "        # Here we create an S3 client using the boto3 library\n",
         "        s3_client = boto3.client(\n",
         "            's3',\n",
+        "            # The AWS credentials are passed to the client\n",
         "            aws_access_key_id=aws_access_key_id,\n",
         "            aws_secret_access_key=aws_secret_access_key\n",
         "        )\n",
@@ -43,9 +45,8 @@
         "    except NoCredentialsError:\n",
         "        print(\"Your AWS credentials were not found.\")\n",
         "        return\n",
-        "    # Input of function is the bucket name (which is always deeplearningcvfood),\n",
-        "    # the S3 folder which can either be: public_test_release_2.0/ , public_training_set_release_2.0/ , public_validation_set_2.0/\n",
-        "    # and a default local directory\n",
+        "    # Input of function is the bucket name (which will be cvdeeplearningfiltered),\n",
+        "    # the S3 folder which can either be: Training, Validation or Test\n",
         "    def download_s3_folder(bucket_name, s3_folder, local_dir=None):\n",
         "        if local_dir is None:\n",
         "            local_dir = s3_folder\n",
@@ -74,25 +75,18 @@
         "    # Call the download function\n",
         "    download_s3_folder(bucket_name, s3_folder, local_dir)\n",
         "\n",
-        "# Usage of function\n",
+        "# These are the credentials for the AWS S3 bucket. They will be used to authenticate the client and are consistent for all users.\n",
         "aws_access_key_id = 'AKIA6GBMB6KOCGR7U6EQ'\n",
         "aws_secret_access_key = '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'\n",
         "bucket_name = 'deeplearningcvfood'\n",
-        "# The different choices for the s3_folder are: public_test_release_2.0/ , public_training_set_release_2.0/ , public_validation_set_2.0/\n",
+        "\n",
+        "# The different choices for the s3_folder are: Training, Validation or Test\n",
         "s3_folder = 'public_test_release_2.0/'\n",
         "local_dir = '/content/drive/My Drive/Project_1/S3_Data/Test/'\n",
         "\n",
+        "# Call the function\n",
         "setup_and_download_from_s3(aws_access_key_id, aws_secret_access_key, bucket_name, s3_folder, local_dir)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Jyk_hEX0N8O8"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
